--- a/components/printable/projects.module.scss
+++ b/components/printable/projects.module.scss
@@ -1,3 +1,9 @@
+.projects {
+    margin: 0 .5em;
+    padding-bottom: 1em;
+    page-break-inside: avoid;
+}
+
 .project {
     $width-breakpoint: 500px;
     $gap: var(--gap);
@@ -6,13 +12,24 @@
     column-gap: 1rem;
     grid-template-areas: "title   type"
                          "details details";
-    margin-bottom: $gap;
+    grid-row-gap: .5em;
+    margin-top: 1.5em;
+
+    @media (max-width: $width-breakpoint) {
+        grid-row-gap: .25em;
+        grid-template-areas: "title"
+                             "type"
+                             "details";
+    }
 
     .type {
         grid-area: type;
         justify-self: right;
+        align-self: center;
+        margin: 0;
+        font-size: .9em;
+        line-height: 1.6em;
         @media (max-width: $width-breakpoint) {
-            margin: .5rem 0;
             justify-self: flex-start;
             color: var(--dark-gray);
         }
@@ -20,12 +37,8 @@
 
     .title {
         grid-area: title;
-        p {
-            font-weight: var(--font-bold);
-            @media (max-width: $width-breakpoint) {
-                margin-bottom: 0;
-            }
-        }
+        font-weight: var(--font-bold);
+        margin: 0;
     }
 
     .details {
