--- a/components/printable/skills.module.scss
+++ b/components/printable/skills.module.scss
@@ -1,43 +1,36 @@
 .skills {
-    ul {
-        padding-left: calc(var(--gap) * 1.5);
-    }
-
-    h3 {
-        margin-bottom: 0;
-    }
+    margin: 0 .5em;
+    padding-bottom: 1em;
 
     .set-wrapper {
-        display: block;
+        margin-top: 1em;
+        display: flex;
+        flex-wrap: wrap;
     }
 
     .skill-set {
-        float: left;
-        width: 50%;
-        height: 7rem;
+        $width-breakpoint: 500px;
+        flex: 0 0 50%;
         margin-bottom: 1rem;
 
+        @media (max-width: $width-breakpoint) {
+            flex: 0 0 100%;
+        }
+
         h3 {
+            margin: 0;
             text-transform: capitalize;
         }
-    }
-
-    .skill-group {
-        $gap: .5rem;
-        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2), 0 0 11px 0 rgba(0, 0, 0, 0.19);
-
-        .header {
-            background-color: #cfcfcf;
-            border-bottom: 1px solid #777777;
-            margin-bottom: $gap;
-            height: $gap * 4;
-            line-height: $gap * 4;
-            padding-left: $gap;
+        ul {
+            padding-left: calc(var(--gap) * 1.5);
+            margin-top: .5em;
+            margin-bottom: 0;
         }
 
-        .body {
-            margin: $gap;
+        &:nth-child(odd) {
+            ul {
+                margin-right: .5em;
+            }
         }
     }
-
 }
